# IndieStudio

./: .gitattributes  AItem.cpp  AItem.h  APowerUp.cpp  APowerUp.h  CMakeLists.txt  Camera.cpp  Camera.h  CollisionTools.cpp  CollisionTools.h  ConfigFileManager.cpp  ConfigFileManager.h  CoreApplication.cpp  CoreApplication.h  DamagePowerUp.cpp  DamagePowerUp.h  DataSerialize.cpp  DataSerialize.h  Game.cpp  Game.h  InputListener.cpp  InputListener.h  Key.cpp  Key.h  Keyboard.cpp  Keyboard.h  LeaderBoard.cpp  LeaderBoard.h  Makefile  Menu.cpp  Menu.hh  MoveUtils.cpp  MoveUtils.h  Potion.cpp  Potion.h  Projectile.cpp  Projectile.h  README.md  Scene.h  SpeedPowerUp.cpp  (+7 more)
Entities/: ACharacter.cpp  ACharacter.h  AHero.cpp  AHero.h  Archer.cpp  Archer.h  Demon.cpp  Demon.h  Dragon.cpp  Dragon.h  EntitiesFactory.cpp  EntitiesFactory.h  Ghost.cpp  Ghost.h  Grunt.cpp  Grunt.h  Spawner.cpp  Spawner.h  Warrior.cpp  Warrior.h
installer/: .gitattributes  gameGauntlet.deb
installer/linux/: Makefile  REAME  gauntlet
installer/linux/dep/: .gitattributes  libOgreMain.so.1.10.0  libOgreOverlay.so.1.10.0  libavcodec.so.54  libavformat.so.54  libavutil.so.52  libboost_system.so.1.54.0  libboost_thread.so.1.54.0  libgcrypt.so.11  libgdkglext-x11-1.0.so.0  libgnutls.so.26  libgtkglext-x11-1.0.so.0  libjpeg.so.8  libopencv_core.so.2.4  libopencv_highgui.so.2.4  libopencv_imgproc.so.2.4  libopenjpeg.so.2  librtmp.so.0  libswscale.so.2  libtbb.so.2  libzzip-0.so.13
installer/linux/dep/OGRE/: Plugin_CgProgramManager.so.1.10.0  Plugin_OctreeSceneManager.so.1.10.0  Plugin_OctreeZone.so.1.10.0
installer/linux/dep/OGRE/Samples/: Sample_AtomicCounters.so.1.10.0  Sample_BSP.so.1.10.0  Sample_BezierPatch.so.1.10.0  Sample_Compute.so.1.10.0  Sample_Dot3Bump.so.1.10.0  Sample_DualQuaternion.so.1.10.0  Sample_DynTex.so.1.10.0  Sample_EndlessWorld.so.1.10.0  Sample_HLMS.so.1.10.0  Sample_Instancing.so.1.10.0  Sample_Ocean.so.1.10.0  Sample_PNTriangles.so.1.10.0  Sample_SSAO.so.1.10.0  Sample_Shadows.so.1.10.0  Sample_SkeletalAnimation.so.1.10.0  Sample_SkyBox.so.1.10.0  Sample_SkyPlane.so.1.10.0  Sample_Smoke.so.1.10.0  (+4 more)
installer/linux/media/materials/: BlackGhost.material  Castle.material  Chem.material  Demon.material  Dragon.material  Ghost.material  GoldText.material  LifePotion.material  Warrior.material  WhiteGhost.material  appareillage.material  black_shuriken.material  bossGround.material  dallage.material  env_eau.material  fences.material  herbe2.material  metal.material  terre.material  wood.material
installer/linux/media/models/: Chest.mesh  Doors.002.mesh  Doors.003.mesh  Doors.004.mesh  Doors.005.mesh  Doors.006.mesh  Doors.007.mesh  Doors.008.mesh  Dragon.mesh  Dragon.skeleton  Ghost.mesh  Ghost.skeleton  Key.mesh  LifePotion.mesh  LifePotion.skeleton  Lutin.mesh  Lutin.skeleton  Ogre.mesh  Shuriken.skeleton  Sword.mesh  Sword.skeleton  Warrior.skeleton  goldChest.mesh
media/materials/: Arms2.jpg.material.material  Bois_-_Noyer_ver.material  Boot.material  ChestText.material  Eau.001.material  Key.material  KeyGold.material  Lutin.material  Material.002.material  Ogre.material  Sol_Arene.material  Sphere.material  Sword.material  beton.material  bois.material  brique.material  eau.material  gold.material  grey_shuriken.material  herbe.material  lamelle.material  peinture_eau.material  pierre.material  portes.material
media/materials/scripts/: Bois_-_Lamell�-c.material  Brique_-_ancienn.material  Dallage_-_Pav�s.material  Env._-_Terre.material
media/models/: Chest.skeleton  Claquette.mesh  Claquette.skeleton  Doors.001.mesh  Doors.004.skeleton  Doors.mesh  Key.skeleton  MyDemon.mesh  MyDemon.skeleton  Ogre.skeleton  Pont.mesh  Shuriken.mesh  Sphere.mesh  Sphere.skeleton  Warrior.mesh
saves/: game2  game3
(+8 files in other folders)
